--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "jgaoax/jgaoax.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Jing Gao (高晶)"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
