--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Jing Gao (高晶)"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : "   "
   location         : "Hong Kong, China"
   employer         : # "Hong Kong University of Science and Technology"
   uri              : # URL
