--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "About me"
+title                    : "Jing Gao - Homepage"
 title_separator          : "-"
 name                     : &name "Jing Gao (高晶)"
 description              : &description "personal description"
