--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Jing Gao (高晶)"
   pronouns         : # example: "she/her"  
   bio              : "   "
-  location         : "Hong Kong, China"
+  location         : "Clear Water Bay, Hong Kong"
   employer         : # "Hong Kong University of Science and Technology"
   uri              : # URL
   email            : "jgaoax@connect.ust.hk" 
