--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Jing Gao (高晶)"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. candidate in the \n Department of Civil and Environmental Engineering, HKUST"
+  bio              : "Ph.D. candidate in Civil Engineering, HKUST"
   location         : "Clear Water Bay, Hong Kong"
   employer         : # "Hong Kong University of Science and Technology"
   uri              : # URL
