--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "profile.jpg"
   name             : "Jing Gao (高晶)"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. candidate in the Department of | Civil Engineering, HKUST"
-  location         : "Clear Water Bay, Hong Kong"
+  bio              : "Ph.D. candidate in Civil Engineering, HKUST"
+  location         : "Hong Kong"
   employer         : # "Hong Kong University of Science and Technology"
   uri              : # URL
   email            : "jgaoax@connect.ust.hk" 
