--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/jgaoax"
+  github           : "jgaoax"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/jing-gao-79218b2a9/"
+  linkedin         : "Jing Gao"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
