--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Jing Gao"
+  linkedin         : "jing-gao-79218b2a9"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
