--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "jgaoax/jgaoax.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Jing Gao (高晶)"
+  name             : "Dr. Jing Gao"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. candidate at HKUST"
+  bio              : "Ph.D. graduate at HKUST"
   location         : "Hong Kong"
   employer         : # "Hong Kong University of Science and Technology"
   uri              : # URL
