--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.jpg"
   name             : "Dr. Jing Gao"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. graduate at HKUST"
+  bio              : "Research Assistant Professor at The Hong Kong Polytechnic University"
   location         : "Hong Kong"
-  employer         : # "Hong Kong University of Science and Technology"
-  uri              : # URL
-  email            : "jgaoax@connect.ust.hk" 
+  employer         : "The Hong Kong Polytechnic University"
+  uri              : "https://jgaoax.github.io"
+  email            : "jing.gao@polyu.edu.hk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
