--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Dr. Jing Gao"
   pronouns         : # example: "she/her"  
-  bio              : "Research Assistant Professor at PolyU"
+  bio              : "Research Assistant Professor<br>Department of Logistics and Maritime Studies<br>The Hong Kong Polytechnic University"
   location         : "Hong Kong"
-  employer         : "The Hong Kong Polytechnic University"
+  # employer         : "The Hong Kong Polytechnic University"
   # uri              : "https://jgaoax.github.io"
   email            : "jing.gao@polyu.edu.hk" 
 
